<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/tittleView"
        style="@style/TittleBar">

        <LinearLayout
            android:id="@+id/tittleBack"
            style="@style/Tittle_Left_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:src="@drawable/back" />

            <TextView
                style="@style/TittleLeftText"
                android:gravity="center_vertical"
                android:text="@string/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tittleText"
            style="@style/Tittle_Center_Text"
            android:text="@string/about" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type01"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type01"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type02"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type02"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type03"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type03"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type04"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type04"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type05"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type05"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type06"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type06"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type07"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type07"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <RadioButton
                android:id="@+id/type08"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingLeft="@dimen/dp5"
                android:text="@string/zone_type08"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/liner" />
        </RadioGroup>

    </ScrollView>

</LinearLayout>