<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/dialog_first_back"
            android:gravity="center"
            android:text="@string/user_choose_register"
            android:textColor="@color/text_color"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/liner" />

        <TextView
            android:id="@+id/tv_by_normal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/ll_press"
            android:gravity="center"
            android:text="@string/user_registered_normal"
            android:textColor="@color/theme"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/liner" />

        <TextView
            android:id="@+id/tv_by_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/ll_press"
            android:gravity="center"
            android:text="@string/user_registered_phone"
            android:textColor="@color/theme"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/liner" />

        <TextView
            android:id="@+id/tv_by_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/dialog_last_back"
            android:gravity="center"
            android:text="@string/user_registered_email"
            android:textColor="@color/theme"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/dialog_back_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/theme"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>