<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tittleView"
        style="@style/TittleBar">

        <LinearLayout
            android:id="@+id/tittleBack"
            style="@style/Tittle_Left_Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:src="@drawable/back" />

            <TextView
                style="@style/TittleLeftText"
                android:gravity="center_vertical"
                android:text="@string/save" />
        </LinearLayout>

        <TextView
            android:id="@+id/tittleText"
            style="@style/Tittle_Center_Text"
            android:text="@string/about" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi01" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <CheckBox
                android:id="@+id/cb02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi02" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <CheckBox
                android:id="@+id/cb03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi03" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <CheckBox
                android:id="@+id/cb04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi04" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <CheckBox
                android:id="@+id/cb05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi05" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <CheckBox
                android:id="@+id/cb06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi06" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />

            <CheckBox
                android:id="@+id/cb07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:paddingBottom="@dimen/dp15"
                android:paddingLeft="@dimen/dp10"
                android:paddingTop="@dimen/dp15"
                android:text="@string/xingqi07" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/liner" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>